--- a/TestAcuite/Views/Calibration.xaml
+++ b/TestAcuite/Views/Calibration.xaml
@@ -1,126 +1,143 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="TestAcuite.Calibration">
+             x:Class="TestAcuite.Calibration" BackgroundColor="Black">
 
     <ScrollView>
         <VerticalStackLayout
             Spacing="15"
             Padding="15,0">
-            <Button
-                Text="Sauvegarder la calibration"
-                HorizontalOptions="Center"
-                Command="{Binding CalibrationValidationCommand}" />
-
-            <Button
-                Text="Lancer le test"
-                HorizontalOptions="Center"
-                Clicked="OnRunClicked" />
-
-            <Image
-                Source="planche.png"
-                HeightRequest="200"
-                HorizontalOptions="Center" />
-
-            <Grid HorizontalOptions="Center">
-                <Grid.RowDefinitions>
-                    <RowDefinition Height="*" />
-                    <RowDefinition Height="*" />
-                    <RowDefinition Height="*" />
-                    <RowDefinition Height="*" />
-                </Grid.RowDefinitions>
+            
+           
+            <Grid>
                 <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="70" />
-                    <ColumnDefinition Width="500" />
-                    <ColumnDefinition Width="200" />
+                    <ColumnDefinition Width="800" />
+                    <ColumnDefinition Width="1000" />
                 </Grid.ColumnDefinitions>
+                <Grid HorizontalOptions="Start" Grid.Column="0" VerticalOptions="Center">
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="400" />
+                        <RowDefinition Height="100" />
+                        <RowDefinition Height="50" />
+                        <RowDefinition Height="50" />
+                        <RowDefinition Height="50" />
+                    </Grid.RowDefinitions>
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="70" />
+                        <ColumnDefinition Width="500" />
+                        <ColumnDefinition Width="200" />
+                    </Grid.ColumnDefinitions>
+                    <Image
+                        Source="planche.png"
+                        Grid.Column="1"
+                        Grid.Row="0"
+                        HeightRequest="200"
+                        HorizontalOptions="Center" />
 
-                <Image
-                    Grid.Column="0"
-                    Grid.Row="0"
-                    Source="distance.png"
-                    HeightRequest="50"/>
+                    <Button
+                        Text="Sauvegarder la calibration"
+                        HorizontalOptions="Center"
+                        HeightRequest="40"
+                        Grid.Column="1"
+                        Grid.Row="1"
+                        Command="{Binding CalibrationValidationCommand}" />
 
-                <Label
-                    Grid.Column="1"
-                    Grid.Row="0"
-                    Text="Distance Patient-Ecran (cm): "
-                    FontSize="32"/>
-
-                <Entry
-                    Grid.Column="2"
-                    Text ="{Binding Distance, Mode=TwoWay}"
-                    Grid.Row="0"
-                    FontSize="32"/>
-
-                <Image
-                    Grid.Column="0"
-                    Grid.Row="1"
-                    Source="eye.png"
-                    HeightRequest="50"/>
-
-
-                <Label
-                    Grid.Column="1"
-                    Grid.Row="1"
-                    Text="Accuité de référence (X/10)"
-                    FontSize="32" />
-
-                <Entry
-                    Grid.Column="2"
-                    Grid.Row="1"
-                    Text ="{Binding Accuity, Mode=TwoWay}"
-                    FontSize="32"/>
+                    <Button
+                        Grid.Column="2"
+                        HeightRequest="40"
+                        Grid.Row="1"
+                        Text="Lancer le test"
+                        HorizontalOptions="Center"
+                        Command="{Binding GoToAccuiteCommand}" />
 
 
-                <Image
-                    Grid.Column="0"
-                    Grid.Row="2"
-                    Source="ruler.png"
-                    HeightRequest="50"/>
+                    <Image
+                        Grid.Column="0"
+                        Grid.Row="2"
+                        Source="distance.png"
+                        HeightRequest="50"/>
 
-                <Label
-                    Grid.Column="1"
-                    Grid.Row="2"
-                    Text="Hauteur de la lettre (cm)"
-                    FontSize="32" />
+                    <Label
+                        Grid.Column="1"
+                        Grid.Row="2"
+                        TextColor="White"
+                        Text="Distance Patient-Ecran (cm): "
+                        FontSize="32"/>
 
-                <Entry
-                    Grid.Column="2"
-                    Grid.Row="2"
-                    Text ="{Binding TextSize, Mode=TwoWay}"
-                    FontSize="32"/>
+                    <Entry
+                        Grid.Column="2"
+                        Text ="{Binding Distance, Mode=TwoWay}"
+                        Grid.Row="2"
+                       BackgroundColor="White"
+                        FontSize="32"/>
 
-
-                <Image
-                    Grid.Column="0"
-                    Grid.Row="3"
-                    Source="fontsize.png"
-                   HeightRequest="50"/>
-
-
-                <Label
-                    Grid.Column="1"
-                    Grid.Row="3"
-                    Text="Taille de la police de caractère"
-                    FontSize="32" />
-
-                <Slider x:Name="fontSizeSlider"
-                Grid.Column="3"
-                Grid.Row="4"
-                Minimum="10"
-                Maximum="1000"
-                Value="{Binding FontSize, Mode=TwoWay}" />
+                    <Image
+                        Grid.Column="0"
+                        Grid.Row="3"
+                        Source="eye.png"
+                        HeightRequest="50"/>
 
 
+                    <Label
+                        Grid.Column="1"
+                        Grid.Row="3"
+                        TextColor="White"
+                        Text="Accuité de référence (X/10)"
+                        FontSize="32" />
+
+                    <Entry
+                        Grid.Column="2"
+                        Grid.Row="3"
+                        Text ="{Binding Accuity, Mode=TwoWay}"
+                        BackgroundColor="White"
+                        FontSize="32"/>
+
+
+                    <Image
+                        Grid.Column="0"
+                        Grid.Row="4"
+                        Source="ruler.png"
+                        HeightRequest="50"/>
+                    <Label
+                        Grid.Column="1"
+                        TextColor="White"
+                        Grid.Row="4"
+                        Text="Hauteur de la lettre (cm)"
+                        FontSize="32" />
+
+                    <Entry
+                        Grid.Column="2"
+                        Grid.Row="4"
+                        BackgroundColor="White"
+                        Text ="{Binding TextSize, Mode=TwoWay}"
+                        FontSize="32"/>
+
+
+                </Grid>
+
+                <VerticalStackLayout HorizontalOptions="Start"  Grid.Column="1">
+                    <Image
+                        Source="fontsize.png"
+                       HeightRequest="50"/>
+
+                    <Slider x:Name="fontSizeSlider"
+                        Minimum="10"
+                        Maximum="2000"
+                        WidthRequest="1000"
+                        Value="{Binding FontSize, Mode=TwoWay}" />
+                    <Label
+                        Grid.Column="2"
+                        Grid.Row ="2"
+                        LineHeight="-1"
+                        Text="Z"
+                        TextColor="White"
+                        FontFamily="OpticianSans"
+                        FontSize="{Binding FontSize, Mode=OneWay}"/>
+                </VerticalStackLayout>
+
+                 
             </Grid>
-
-            <Label
-                    Text="Z"
-                    FontFamily="OpticianSans"
-                    FontSize="{Binding FontSize, Mode=OneWay}"
-                    VerticalTextAlignment="Start"
-                    HorizontalOptions="Center" />
+           
 
         </VerticalStackLayout>
     </ScrollView>
