--- a/TestAcuite/Views/Acuite.xaml
+++ b/TestAcuite/Views/Acuite.xaml
@@ -1,16 +1,26 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="TestAcuite.Acuite" BackgroundColor="{Binding BackGroundColor, Mode=TwoWay}">
+             x:Class="TestAcuite.Acuite" BackgroundColor="{Binding BackGroundColor, Mode=TwoWay}"
+             Shell.NavBarIsVisible="False">
 
 
     <StackLayout HorizontalOptions="Center" VerticalOptions="Center">
-            <Label
+        <Label
                 TextColor ="{Binding TextColor, Mode=TwoWay}"
                 Text="{Binding TextToShow, Mode=TwoWay}"
-                FontFamily="OpticianSans"
+                FontFamily="Sloan"
+                CharacterSpacing="16"
                 FontSize="{Binding FontSize, Mode=TwoWay}" VerticalOptions="Start" FontAutoScalingEnabled="True" />
-         </StackLayout>
+
+        <Label
+                TextColor ="{Binding TextColor, Mode=TwoWay}"
+                VerticalTextAlignment="End"
+                IsVisible="{Binding IsAcuiteVisible, Mode=TwoWay}"
+                Text="{Binding AcuiteText, Mode=TwoWay}"
+                FontSize="40" VerticalOptions="Start" FontAutoScalingEnabled="True" />
+        
+    </StackLayout>
 
 
 </ContentPage>
