--- a/TestAcuite/Views/Calibration.xaml
+++ b/TestAcuite/Views/Calibration.xaml
@@ -51,7 +51,8 @@
                         Grid.Column="2"
                         Text ="{Binding Distance, Mode=TwoWay}"
                         Grid.Row="1"
-                       BackgroundColor="Black"
+                        TextColor="White"
+                        BackgroundColor="Black"
                         FontSize="32"/>
 
                     <Image
@@ -71,6 +72,7 @@
                     <Entry
                         Grid.Column="2"
                         Grid.Row="2"
+                        TextColor="White"
                         Text ="{Binding Accuity, Mode=TwoWay}"
                         BackgroundColor="Black"
                         FontSize="32"/>
@@ -92,6 +94,7 @@
                         Grid.Column="2"
                         Grid.Row="3"
                         BackgroundColor="Black"
+                        TextColor="White"
                         Text ="{Binding TextSize, Mode=TwoWay}"
                         FontSize="32"/>
 
